# tallinn-softfloat

./: tallinn-softfloat.cabal
cbits/: native.c
src/: LocalPrelude.hs
src/Data/: Bit.hs  BitArray.hs  Float.hs
test/: Main.hs  Main_DataBits.hs  main.c
